--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ main,
 footer,
 header {
     padding-inline: 9%;
+    color: #ffffff;
 }
 
 /* =============Nav =============   */
@@ -34,7 +35,7 @@ nav a:visited {
     font-family: 'Montserrat Alternates';
     font-style: normal;
     font-weight: 400;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     color: #ffffff;
     font-weight: lighter;
 }
@@ -113,3 +114,40 @@ header div img {
 }
 
 /* ============= end Icon =============   */
+
+/* ============= main =============   */
+main {
+    height: calc(100vh - 120px) ;
+    padding-top: 60px;
+    box-sizing: border-box;
+    border: 3px solid white;
+}
+
+/* ============= end main =============   */
+main {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.logo {
+    width: 200px;
+    height: auto;
+}
+
+.logo img {
+    width: 100%;
+    height: auto;
+}
+h1 {
+    font-size: 3.5rem;
+    margin-bottom: 0;
+}
+
+main p, main h2, h1{
+    margin: 0;
+}
+
+main p, main h2 {
+    font-size: 1.3rem;
+}
