--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Michroma&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 body {
     padding: 0;
     margin: 0;
     font-size: 14px;
     background-color: #280B4E;
+    font-family: 'Montserrat Alternates', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    
 }
 
 header {
@@ -10,7 +16,7 @@ header {
     justify-content: space-between;
     align-items: center;
 
-    background-color: #130428; 
+    background-color: #130428;
 }
 
 main,
@@ -32,12 +38,11 @@ nav a:link,
 nav a:visited {
     text-decoration: none;
     display: block;
-    font-family: 'Montserrat Alternates';
     font-style: normal;
     font-weight: 400;
     font-size: 1.3rem;
     color: #ffffff;
-    font-weight: lighter;
+    
 }
 
 nav {
@@ -75,6 +80,7 @@ nav a:hover {
     30% {
         color: transparent;
     }
+
     100% {
 
         color: #ffffff;
@@ -117,14 +123,10 @@ header div img {
 
 /* ============= main =============   */
 main {
-    height: calc(100vh - 120px) ;
+    height: calc(100vh - 120px);
     padding-top: 60px;
     box-sizing: border-box;
     border: 3px solid white;
-}
-
-/* ============= end main =============   */
-main {
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -139,15 +141,46 @@ main {
     width: 100%;
     height: auto;
 }
+
 h1 {
     font-size: 3.5rem;
     margin-bottom: 0;
+    font-family: "Michroma", sans-serif;
 }
 
-main p, main h2, h1{
+main p,
+main h2,
+h1 {
     margin: 0;
 }
 
-main p, main h2 {
+main p,
+main h2 {
     font-size: 1.3rem;
+    
 }
+
+.icon-social {
+    margin-block: 20px;
+    display: flex;
+    justify-content: space-between;
+    gap: 15px;
+}
+
+
+.icon-social svg {
+    width: 20px;
+    height: 20px;
+    fill: white;
+    transition: width 2s, height 2s, background-color 2s, transform 2s;
+}
+
+.icon-social svg:hover {
+    fill: #f8e21d;
+    width: 60px;
+    height: 60px;
+    transform: rotate(10deg);
+}
+/* ============= end main =============   */
+
+
