--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     0% {
         background-color: transparent;
     }
+
     100% {
         background-color: #110422;
     }
@@ -32,6 +33,7 @@ body {
     0% {
         box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.078);
     }
+
     100% {
         box-shadow: 0px 1px 5px yellow;
     }
@@ -278,8 +280,70 @@ main h2 {
 main p,
 main h2,
 h1,
-main div svg{
+main div svg {
     animation: animacion-main 3s forwards;
 }
+
+.space {
+    height: 100%;
+}
+
+.luces {
+    width: 27px;
+    min-height: 40px;
+    margin: 6px;
+    border: 2px solid white;
+    padding-block: 5px;
+    margin-block: 10px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.circulos {
+    width: 5px;
+    height: 5px;
+    /* border: 1px solid white; */
+    border-radius: 5px;
+    background-color: white;
+}
+
+
+@keyframes animacion-luces {
+    0% {
+        background-color: gray;
+    }
+
+    100% {
+        background-color: #ffffff;
+        box-shadow: 1px 1px 10px 0px white;
+        /* box-shadow: 5px 0 5px 1px rgba(255, 255, 255, 0.968) */
+    }
+}
+
+
+.circulos:nth-child(1) {
+    animation-name: animacion-luces;
+    animation-duration: 0.6s;
+    animation-delay: 0s;
+    animation-iteration-count: infinite;
+}
+
+.circulos:nth-child(2) {
+    animation-name: animacion-luces;
+    animation-duration: 0.6s;
+    animation-delay: 0.1s;
+    animation-iteration-count: infinite;
+}
+
+.circulos:nth-child(3) {
+    animation-name: animacion-luces;
+    animation-duration: 0.6s;
+    animation-delay: 0.2s;
+    animation-iteration-count: infinite;
+}
+
 
 /* ============= end main =============   */
