--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ header {
     /* animation: animation-header 0.2s 6109ms forwards; */
 
     /* animation: color-nav 0.2s 1 forwards; */
-
+    z-index: 1000;
     animation-name: animation-header, color-nav;
     animation-duration: 0.2s, 2s;
     animation-delay: 6109ms, 0s;
@@ -62,7 +62,8 @@ header {
 
 main,
 footer,
-header {
+header,
+section {
     padding-inline: 9%;
     color: #ffffff;
 }
@@ -288,11 +289,25 @@ main div svg {
     height: 100%;
 }
 
+@keyframes animacion-main-luces {
+    0% {
+        border: 2px solid transparent;
+
+    }
+
+    30% {
+        border: 2px solid transparent;
+    }
+
+    100% {
+        border: 2px solid white;
+    }
+}
+
 .luces {
     width: 27px;
     min-height: 40px;
     margin: 6px;
-    border: 2px solid white;
     padding-block: 5px;
     margin-block: 10px;
     border-radius: 20px;
@@ -300,6 +315,7 @@ main div svg {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    animation: animacion-main-luces 3s forwards;
 }
 
 .circulos {
@@ -307,7 +323,7 @@ main div svg {
     height: 5px;
     /* border: 1px solid white; */
     border-radius: 5px;
-    background-color: white;
+    background-color: transparent;
 }
 
 
@@ -318,7 +334,7 @@ main div svg {
 
     100% {
         background-color: #ffffff;
-        box-shadow: 1px 1px 10px 0px white;
+        box-shadow: 1px 1px 10px 1px white, 1px 1px 50px 4px white;
         /* box-shadow: 5px 0 5px 1px rgba(255, 255, 255, 0.968) */
     }
 }
@@ -327,23 +343,80 @@ main div svg {
 .circulos:nth-child(1) {
     animation-name: animacion-luces;
     animation-duration: 0.6s;
-    animation-delay: 0s;
+    animation-delay: 1s;
     animation-iteration-count: infinite;
 }
 
 .circulos:nth-child(2) {
     animation-name: animacion-luces;
     animation-duration: 0.6s;
-    animation-delay: 0.1s;
+    animation-delay: 1.1s;
     animation-iteration-count: infinite;
 }
 
 .circulos:nth-child(3) {
     animation-name: animacion-luces;
     animation-duration: 0.6s;
-    animation-delay: 0.2s;
+    animation-delay: 1.2s;
     animation-iteration-count: infinite;
 }
 
 
 /* ============= end main =============   */
+
+
+/* ============= About me =============   */
+.aboutme {
+    padding-top: 10rem;
+}
+
+.aboutme h2 {
+    text-align: center;
+    font-size: 1.7rem;
+    letter-spacing: 3px;
+    margin-bottom: 7rem;
+    position: relative;
+    text-transform: uppercase;
+}
+
+.aboutme h2 span::after {
+    content: '';
+    position: absolute;
+    top: calc(100% + 1.5rem);
+    height: 5px;
+    width: 2rem;
+    background: #eae8ef;
+    box-shadow: 1px 1px 10px 1px white, 1px 1px 30px 4px white;
+    left: 50%;
+    transform: translateX(-55%);
+    border-radius: 5px;
+}
+
+.about__content {
+    display: flex;
+    flex-direction: row;
+    gap: 5rem;
+    justify-content: space-between;
+
+}
+
+.about__content div {
+    border: 1px solid white;
+    width: 100%;
+}
+
+.about__content h3 {
+    margin-top: 0;
+    margin-bottom: 2rem;
+    font-size: 1.3rem;
+
+}
+
+.about__content p {
+    margin-top: 0;
+    font-size: 0.9rem;
+    line-height: 1.7;
+}
+
+
+/* ============= end About me =============   */
