--- a/style.css
+++ b/style.css
@@ -87,6 +87,14 @@ nav a:visited {
 
 }
 
+@keyframes nav-name-scroll {
+    from {}
+
+    to {
+        height: 50px;
+    }
+}
+
 nav {
     display: flex;
     align-items: center;
@@ -94,6 +102,10 @@ nav {
     padding-block: 10px;
     box-sizing: border-box;
     height: 80px;
+
+    animation: nav-name-scroll linear both;
+    animation-timeline: scroll();
+    animation-range: 0 150px;
 }
 
 
@@ -144,8 +156,6 @@ nav a:hover {
     }
 
 }
-
-
 
 nav li:nth-child(1) a {
     animation-name: mi-animacion, mi-liz;
@@ -238,17 +248,19 @@ main {
     height: auto;
 }
 
-h1 {
-    font-size: 3.5rem;
-    margin-bottom: 0;
-    font-family: "Michroma", sans-serif;
-}
 
 main p,
 main h2,
 h1 {
     margin: 0;
 }
+
+h1 {
+    font-size: 3.5rem;
+    margin-bottom: 1rem;
+    font-family: "Michroma", sans-serif;
+}
+
 
 main p,
 main h2 {
@@ -366,20 +378,24 @@ main div svg {
 
 
 /* ============= About me =============   */
-.aboutme {
-    padding-top: 10rem;
+.aboutme,
+.meproyects {
+    padding-block-start: 10rem;
 }
 
-.aboutme h2 {
+.aboutme h2,
+.meproyects h2 {
     text-align: center;
-    font-size: 1.7rem;
+    font-size: 2.2rem;
     letter-spacing: 3px;
     margin-bottom: 7rem;
+    margin-top: 3rem;
     position: relative;
     text-transform: uppercase;
 }
 
-.aboutme h2 span::after {
+.aboutme h2 span::after,
+.meproyects h2 span::after {
     content: '';
     position: absolute;
     top: calc(100% + 1.5rem);
@@ -395,28 +411,85 @@ main div svg {
 .about__content {
     display: flex;
     flex-direction: row;
-    gap: 5rem;
+    gap: 6rem;
     justify-content: space-between;
 
 }
 
 .about__content div {
-    border: 1px solid white;
     width: 100%;
 }
 
 .about__content h3 {
     margin-top: 0;
     margin-bottom: 2rem;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
+    text-transform: capitalize;
 
 }
 
 .about__content p {
     margin-top: 0;
-    font-size: 0.9rem;
+    color: rgba(255, 255, 255, 0.85);
+    font-size: 1rem;
     line-height: 1.7;
+    letter-spacing: 0.2px;
 }
 
+.about__content strong {
+    color: rgba(255, 255, 255, 0.98);
+    ;
+}
+
+.zone-aboutme a:link,
+.zone-aboutme a:visited {
+    text-decoration: none;
+    display: block;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 0.8 rem;
+    font-family: 'Montserrat_Alternates', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    ;
+    font-family: "Michroma", sans-serif;
+    color: #ffffff;
+}
+
+.zone-aboutme a {
+    width: fit-content;
+    margin-top: 2rem;
+    background-color: #361C7F;
+    border: 0px solid #361C7F;
+    box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.15);
+    border-radius: 1rem;
+    padding-block: 0.9rem;
+    padding-inline: 1rem;
+
+}
+
+.zone-aboutme a:hover {
+    color: #110422;
+    background-color: #ffffff;
+    box-shadow: 0px 0px 10px 2px white, 0px 0px 2px 1px white, 0px 0px 60px 1px rgba(255, 255, 255, 0.409);
+}
+
+.skills ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    flex-flow: row wrap;
+    /* justify-content: end; */
+    gap: 5px;
+}
+
+.skills h4 {
+    text-transform: capitalize;
+    color: rgba(255, 255, 255, 0.9);
+    font-size: 1rem;
+}
+
+.skills abbr {
+    border-radius: 5px;
+}
 
 /* ============= end About me =============   */
