--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
     }
 
     100% {
-        box-shadow: 0px 1px 5px yellow;
+        box-shadow: 0px 1px 5px rgb(255, 255, 77);
     }
 }
 
@@ -69,7 +69,7 @@ section {
     color: #ffffff;
 }
 
-/* =============Nav =============   */
+/* ============= Nav =============   */
 
 nav ul {
     list-style: none;
@@ -429,6 +429,7 @@ main div svg {
     margin-bottom: 2rem;
     font-size: 1.5rem;
     text-transform: capitalize;
+    color: rgba(255, 255, 255, 0.98);
 
 }
 
@@ -442,7 +443,6 @@ main div svg {
 
 .about__content strong {
     color: rgba(255, 255, 255, 0.98);
-    ;
 }
 
 .zone-aboutme a:link,
@@ -467,7 +467,6 @@ main div svg {
     border-radius: 1rem;
     padding-block: 0.9rem;
     padding-inline: 1rem;
-
 }
 
 .zone-aboutme a:hover {
@@ -488,7 +487,7 @@ main div svg {
 
 .skills h4 {
     text-transform: capitalize;
-    color: rgba(255, 255, 255, 0.9);
+    color: rgba(255, 255, 255, 0.8);
     font-size: 1rem;
 }
 
@@ -546,11 +545,13 @@ main div svg {
 }
 
 .body-item-proyect h3 {
+    color: rgba(255, 255, 255, 0.85);
     font-size: 1.5rem;
     margin: 0;
 }
 
 .description {
+    color: rgba(255, 255, 255, 0.85);
     z-index: 1;
     font-size: 0.9rem;
     background-color: #361C7F;
@@ -562,6 +563,7 @@ main div svg {
 }
 
 .tools {
+    color: rgba(255, 255, 255, 0.85);
     margin: 0;
     padding: 0;
     list-style: none;
@@ -587,7 +589,7 @@ main div svg {
 }
 
 .icon-proyect a {
-    color: white;
+    color: rgba(255, 255, 255, 0.8);
 }
 
 .imagen-proyect {
@@ -637,6 +639,7 @@ main div svg {
 /* ============= Contactme =============   */
 
 .contactme {
+    color: rgba(255, 255, 255, 0.85);
     text-align: center;
     margin: 0px auto 100px;
     max-width: 600px;
