--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,3 +1,23 @@
+@media screen and (max-width: 1100px) {
+    /* ============= Proyect =============   */
+
+    .item-proyect {
+        margin-inline: 2rem;
+    }
+
+    .body-item-proyect {
+        width: 60%;
+    }
+
+    .imagen-proyect img {
+        display: block;
+        width: calc(16rem + 14vw);
+        /* 36rem; */
+        height: calc(13rem + 10vh);
+        /* 23rem; */
+    }
+}
+
 @media screen and (max-width: 768px) {
 
     header {
@@ -27,44 +47,3 @@
     .contactme {
         padding-block-start: 3rem;
     }
-
-    /* ============= About me =============   */
-
-    .about__content {
-        gap: 2rem;
-    }
-
-    .aboutme h2,
-    .meproyects h2,
-    .contactme h2 {
-        margin-bottom: 5rem;
-        font-size: 2rem;
-    }
-
-    .about__content h3 {
-        font-size: 1.1rem;
-    }
-
-    .about__content p {
-        font-size: .8rem;
-        margin-bottom: .6rem;
-        letter-spacing: .1px;
-    }
-
-    .zone-aboutme a {
-        font-size: .8rem;
-    }
-
-    .skills h4 {
-        font-size: .9rem;
-    }
-
-    .skills ul {
-        gap: 1px;
-    }
-
-    .skills ul li {
-        width: 38px;
-        height: 38px;
-    }
-}
