--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -111,3 +111,24 @@
         background-color: transparent;
         padding-inline: 0;
     }
+
+    .imagen-proyect img {
+        width: 100%;
+        height: 50vh;
+    }
+
+    .imagen-proyect .overlay {
+        background-color: rgba(54, 10, 96, 0.938);
+        box-shadow: 0 10px 30px -15px rgba(12, 2, 27, 0.7);
+    }
+
+    .imagen-proyect:hover .overlay {
+        opacity: 1;
+        box-shadow: 0 20px 30px -15px rgba(12, 2, 27, 0.7);
+        /* Hace que la capa se vuelva transparente al pasar el mouse sobre el contenedor */
+    }
+
+    .body-item-proyect h3 {
+        font-size: 1.1rem;
+    }
+    
