--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -153,6 +153,16 @@
 /* Mobile */
 @media screen and (max-width: 600px) {
 
+    /* Nav */
+    
+    nav ul {
+        gap: 1rem;
+    }
+
+    nav ul a{
+        font-size: 1rem;
+    }
+
     /* ============= About me =============   */
 
     .about__content {
