--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -178,4 +178,9 @@
     .item-proyect {
         margin-inline: 0;
     }
+
+    /* Contact Me */
+    .contactme p{
+        font-size: .7rem;
+    }
 }
